Update index.html again

--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
                     <a href="#contact"><button class="contactbtn">Contact Me</button></a>
                 </div>
                 <div class="icons">
-                    <a href="https://linkedin.com/in/kaushalrai01" target="_blank"><img src="/icons/linkedin.svg"
+                    <a href="https://linkedin.com/in/kaushalrai01" target="_blank"><img src="icons/linkedin.svg"
                             alt="LinkedIn"></a>
-                    <a href="https://github.com/Kaushalrai01" target="_blank"><img src="/icons/github.svg"
+                    <a href="https://github.com/Kaushalrai01" target="_blank"><img src="icons/github.svg"
                             alt="GitHub"></a>
-                    <a href="mailto:ikaushalrai@gmail.com" target="_blank"><img src="/icons/mail.svg"
+                    <a href="mailto:ikaushalrai@gmail.com" target="_blank"><img src="icons/mail.svg"
                             alt="Send Email"></a>
                 </div>
             </div>
 
             <div class="rightHomeContent">
-                <img src="/images/profilepic.png" title="Profile Picture" alt="Profile_pic">
+                <img src="images/profilepic.png" title="Profile Picture" alt="Profile_pic">
             </div>
         </section>
 
@@ -67,7 +67,7 @@
             <h2>About Me</h2>
             <hr style="width: 25%; margin: 8px auto; border: 1px #02fcdb solid;" />
             <div class="leftAboutContent">
-                <img src="/images/profilepic.png" title="Profile Picture" alt="Profile_pic">
+                <img src="images/profilepic.png" title="Profile Picture" alt="Profile_pic">
             </div>
             <div class="rightAboutContent">
 
@@ -145,10 +145,10 @@
                         <p><span>Phone No:</span> +91 8765603762</p>
                         <div class="icons">
                             <a href="https://linkedin.com/in/kaushalrai01" target="_blank"><img
-                                    src="/icons/linkedin.svg" alt="LinkedIn"></a>
-                            <a href="https://github.com/Kaushalrai01" target="_blank"><img src="/icons/github.svg"
+                                    src="icons/linkedin.svg" alt="LinkedIn"></a>
+                            <a href="https://github.com/Kaushalrai01" target="_blank"><img src="icons/github.svg"
                                     alt="GitHub"></a>
-                            <a href="mailto:ikaushalrai@gmail.com" target="_blank"><img src="/icons/mail.svg"
+                            <a href="mailto:ikaushalrai@gmail.com" target="_blank"><img src="icons/mail.svg"
                                     alt="Send Email"></a>
                         </div>
                     </div>
